tests/NormalTests/paczka2/big_fuzzy/34336929.err
Error in line 12: DNY9Y S24 70,2
Error in line 16: x1T S453 82,0
Error in line 9: DQo2vL5y S24 96,5
Error in line 25: DNY9Y S453 -1,3
Error in line 15: DNY9Y S453 66,9
Error in line 47: MqDO9kxE S24 99,4
Error in line 51: DQo2vL5y S453 88,6
Error in line 59: afVUB S24 53,6
Error in line 58: DNY9Y S872 21,9
Error in line 82: S24 S24 22,0
Error in line 89: DQo2vL5y A615 58,2
Error in line 94: DQo2vL5y S453 33,6
Error in line 98: DQo2vL5y S872 34,2
Error in line 101: DQo2vL5y A615 2,8
Error in line 97: x1T S24 43,7
Error in line 106: x1T S24 49,27
Error in line 103: x1T S872 5,0
Error in line 112: DQo2vL5y S453 228
Error in line 113: MqDO9kxE S453 81,0
Error in line 116: FcqYl S24 20,7
Error in line 108: x1T S24 24,4
Error in line 122: DNY9Y S872 35,1
Error in line 121: x1T S453 11,9
Error in line 127: x1T S872 44,2
Error in line 128: x1T S453 37,5
Error in line 139: S24 S872 30,9
Error in line 144: MqDO9kxE S872 10,7
Error in line 157: DNY9Y S24 25,0
Error in line 156: FcqYl S453 27,8
Error in line 161: afVUB A615 70,5
Error in line 164: afVUB S872 66,7
Error in line 172: afVUB S453 34,8
Error in line 173: FcqYl S872 81,3
Error in line 154: MqDO9kxE S24 35,7
Error in line 168: DQo2vL5y S453 14,0
Error in line 180: DQo2vL5y S24 11,5
Error in line 198: DQo2vL5y S24 79,9
Error in line 194: S24 A615 59,6
Error in line 197: MqDO9kxE S453 0,0
Error in line 207: S24 S453 47,1
Error in line 224: DQo2vL5y S453 95,7
Error in line 227: DQo2vL5y S872 68,3
Error in line 225: FcqYl A615 112,5
Error in line 243: S24 S872 3,1
Error in line 237: FcqYl S872 92,4
